--- a/EmployeeBase/Views/Home/Read.cshtml
+++ b/EmployeeBase/Views/Home/Read.cshtml
@@ -9,10 +9,16 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>Read</title>
+    <script src="~/Scripts/jquery-3.2.1.js" type="text/javascript"></script>
+    <script src="~/Scripts/CRUD/Read.js" type="text/javascript"></script>
 </head>
 <body>
   @foreach (var b in ViewBag.employee)
   {
+    <form action="/Home/Delete" method="post" onsubmit="return WannaToDelete()">
+        <input type="hidden" value="@b.Id" name="Id">
+        <input type="submit" value="Delete" />
+    </form>
     <div> <img src="~/Content/Photo/Andrew Romanuk photo.jpg" name="@b.Name" id="@b.Name" /> </div>
       <p>@b.Name</p>
       <p>@b.Surname</p>
@@ -21,9 +27,14 @@
     <div>
         @using (Html.BeginForm("GetFile", "Home", FormMethod.Post))
         {
+
+
+
+
            <input type="hidden" name="FilePath" value="@b.Biography"/>
            <input type="hidden" name="file_path" value="@b.Biography" />
            <input type="submit" value="Download">
+           
         }
     </div>
 
